# ogRoadSplines

./: CMakeLists.txt  COPYING  README.md
CMakeModules/: FindOGRE.cmake
include/: DynamicRenderable.h  Plugin.h  Road.h  RoadEditor.h  RoadPointEditor.h  RoadRenderListener.h
resources/ROAD/: RoadFragmentPass.shd  RoadVertexPass.shd  road.dds  road.material  road.shd  roadstencil.shd
src/: DynamicRenderable.cpp  Plugin.cpp  Road.cpp  RoadEditor.cpp  RoadPointEditor.cpp  RoadRenderListener.cpp
